apps/unithon/backend-main/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unithon-backend-main
  namespace: unithon
  labels:
    app: unithon-backend-main
spec:
  selector:
    matchLabels:
      app: unithon-backend-main
  template:
    metadata:
      labels:
        app: unithon-backend-main
    spec:
      containers:
        - name: unithon-backend-main
          image: hyeonwoo5342/unithon-backend-main:9
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "200Mi"
              cpu: "150m"
            limits:
              memory: "200Mi"
              cpu: "150m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
