apps/unithon/backend-main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unithon-backend-main
  namespace: unithon
  labels:
    app: unithon-backend-main
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: unithon-backend-main
